# docs/swagger/teacher/components/schemas/v1/shifts.response.yaml
@@ -160,6 +160,91 @@ shiftsResponse:
               updatedAt:
                 type: string
                 description: 更新日時
+              subjects:
+                type: object
+                description: 担当教科一覧(Map)
+                properties:
+                  1:
+                    type: array
+                    description: 担当教科一覧(小学校)
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          format: int64
+                          description: 授業科目ID
+                        name:
+                          type: string
+                          description: 授業科目名
+                        color:
+                          type: string
+                          description: 表示色
+                          format: '#rrggbb'
+                        schoolType:
+                          type: integer
+                          format: int32
+                          description: 校種
+                        createdAt:
+                          type: string
+                          description: 登録日時
+                        updatedAt:
+                          type: string
+                          description: 更新日時
+                  2:
+                    type: array
+                    description: 担当教科一覧(中学校)
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          format: int64
+                          description: 授業科目ID
+                        name:
+                          type: string
+                          description: 授業科目名
+                        color:
+                          type: string
+                          description: 表示色
+                          format: '#rrggbb'
+                        schoolType:
+                          type: integer
+                          format: int32
+                          description: 校種
+                        createdAt:
+                          type: string
+                          description: 登録日時
+                        updatedAt:
+                          type: string
+                          description: 更新日時
+                  3:
+                    type: array
+                    description: 担当教科一覧(高等学校)
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          format: int64
+                          description: 授業科目ID
+                        name:
+                          type: string
+                          description: 授業科目名
+                        color:
+                          type: string
+                          description: 表示色
+                          format: '#rrggbb'
+                        schoolType:
+                          type: integer
+                          format: int32
+                          description: 校種
+                        createdAt:
+                          type: string
+                          description: 登録日時
+                        updatedAt:
+                          type: string
+                          description: 更新日時
           lessonTotal:
             type: integer
             format: int64
@@ -301,6 +386,46 @@ shiftsResponse:
         role: 1
         createdAt: '2021-12-12T12:12:30.100Z'
         updatedAt: '2021-12-12T12:12:30.100Z'
+        subjects:
+          1:
+          - id: 1
+            name: 国語
+            color: '#F8BBD0'
+            schoolType: 1
+            createdAt: '2021-12-12T12:12:30Z'
+            updatedAt: '2021-12-12T12:12:30Z'
+          - id: 2
+            name: 数学
+            color: '#BBDEFB'
+            schoolType: 1
+            createdAt: '2021-12-12T12:12:30.100Z'
+            updatedAt: '2021-12-12T12:12:30.100Z'
+          2:
+          - id: 3
+            name: 国語
+            color: '#F8BBD0'
+            schoolType: 2
+            createdAt: '2021-12-12T12:12:30.100Z'
+            updatedAt: '2021-12-12T12:12:30.100Z'
+          - id: 4
+            name: 数学
+            color: '#BBDEFB'
+            schoolType: 2
+            createdAt: '2021-12-12T12:12:30.100Z'
+            updatedAt: '2021-12-12T12:12:30.100Z'
+          3:
+          - id: 5
+            name: 国語
+            color: '#F8BBD0'
+            schoolType: 3
+            createdAt: '2021-12-12T12:12:30.100Z'
+            updatedAt: '2021-12-12T12:12:30.100Z'
+          - id: 6
+            name: 数学
+            color: '#BBDEFB'
+            schoolType: 3
+            createdAt: '2021-12-12T12:12:30.100Z'
+            updatedAt: '2021-12-12T12:12:30.100Z'
       lessonTotal: 3
     - teacher:
         id: 'kSByoE6FetnPs5Byk3a9Zx'
